# tonic-bug

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
lib/: Cargo.toml  build.rs
server/: Cargo.toml
server/src/: main.rs
