[package]
name = "pinger_lib"
version = "0.1.0"
edition = "2021"
authors = ["Alex Fuerst alfuerst@iu.edu"]

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "test-util"] }
tonic = "0.7.2"
prost = "0.10"
prost-types = "0.9.0"

[build-dependencies]
tonic-build = "0.7.2"